--- a/final project 3/assets/main.css
+++ b/final project 3/assets/main.css
@@ -1,3 +1,7 @@
+/* Embed Roboto Font */
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,500i');
+
+
 /* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
   License: none (public domain)
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -25,6 +29,10 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Embed Font */
@@ -113,3 +121,89 @@ body {
   background: #fff;
   box-shadow: 0 0 7px .5px #bdc0c8;
 }
+
+/* Best Seller Section */
+.best-seller {
+  font-family: 'Roboto', sans-serif;
+  max-width: 65%;
+  margin: 2rem auto;
+  background: #fff;
+}
+
+.best-seller_header_wrapper {
+  display: grid;
+  padding: 1.5rem 0;
+  grid-template-columns: 1fr 1fr;
+  border-bottom: 1px solid #aaa;
+}
+
+.best-seller_title {
+  padding-left: 1rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #575962;
+}
+
+.best-seller_buttons {
+  justify-self: end;
+  padding-right: 1rem;
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+
+.best-seller_link {
+  color: #575962;
+  padding: 0.5rem 0.5rem;
+}
+
+.active {
+  background-color: #5867dd;
+  color: #fff; 
+  border-radius: 15px;
+}
+
+.best-seller_item_wrapper {
+  padding: 1.5rem;
+}
+
+.best-seller_item_img {
+  width: 115px;
+}
+
+.best-seller_item_info, .best-seller_item_purchase, .best-seller_item_details, .best-seller_item_purchase_block {
+  display: inline-block;
+}
+
+.best-seller_item_details, .best-seller_item_purchase{
+  vertical-align: top;
+}
+
+.best-seller_item_title, .best-seller_item_description, .best-seller_item_publish {
+  margin: 0.3rem 0;
+}
+
+.best-seller_item_title, {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.best-seller_item_description {
+  font-weight: 300;
+  font-size: 0.7rem;
+}
+
+.best-seller_item_publish {
+  font-weight: 400;
+  font-size: 0.8rem;  
+}
+
+
+.best-seller_item_purchase {
+  /* padding-top: 1.5rem; */
+  padding-left: 1.5rem;
+}
+
+.best-seller_item_values {
+  font-size: 1.3rem;
+}
+ 
