--- a/final project 3/assets/main.css
+++ b/final project 3/assets/main.css
@@ -117,11 +117,6 @@ body {
     ========================================  */
 
  
-body{
-  margin: 0;
-  padding:0;
-  box-sizing: border-box;
-}
 
 .nav-side{
   background:  #212529;
@@ -131,7 +126,7 @@ body{
   height: 100%;
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
-  position: relative;
+  position: fixed;
   letter-spacing: 1px;
 }
 
@@ -141,12 +136,17 @@ ul,li{
   padding: 0;
 }
 
-a{
+a {
   text-decoration: none;
   color: #868aa8;
   padding: 0 2rem;
   
 }
+
+.main{
+  padding-left: 19rem;
+}
+
 
 .main__list{
    color: white;
@@ -498,6 +498,10 @@ height: 100%;
   text-decoration: none;
   color:#7069ca;
  }
+ .container input {
+  height:17px;
+  width: 17px;
+ }
  button {
   background-color:#7069ca;
   border: none;
@@ -519,27 +523,6 @@ height: 100%;
   padding: 15px 20px;
   font-size: 20px;
   border-right: 4px solid #36a3f7;
-}
-.time1{
-   border-right: 4px solid #feb93b;
-}
-.time2{
-   border-right: 4px solid #7069ca;
-}
-.time3{
-   border-right: 4px solid #3abfa3;
-}
-.time4{
-   border-right: 4px solid #283d39;
-}
-.time5{
-   border-right: 4px solid #7069ca;
-}
-.time6{
-   border-right: 4px solid #f4516c;
-}
-.time7{
-   border-right: 4px solid #e751f4;
 }
 .title{
   align-items: center;
