--- a/final project 3/assets/main.css
+++ b/final project 3/assets/main.css
@@ -458,8 +458,8 @@ nav {
   position: relative;
 }
 .blog-img {
-width: 100%;
-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .blog-nav {
   position: absolute;
@@ -492,6 +492,7 @@ height: 100%;
   padding: 10px 15px;
   border: 1px solid rgb(187, 179, 179);
   border-radius: 25px;
+  font-size: 16px;
 }
 .activity_header__btn {
   border: none;
@@ -541,6 +542,20 @@ height: 100%;
 /*  ========================================
     Section second
     ========================================  */
+.profit-widget {
+  justify-content: space-between;
+}
+.profit-widget .widget_info {
+  padding: 0;
+}
+.widget_profit_title {
+  color: rgb(37, 37, 37);
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.profit-widget .widget_sub_info {
+  font-size: 16px;
+}
 
 
 
