--- a/final project 3/assets/main.css
+++ b/final project 3/assets/main.css
@@ -610,8 +610,8 @@ nav {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-gap: 15px 20px;
-  padding: 40px 0px;
   color: #575962;
+  padding: 30px 20px;
 }
 .time {
   color:#40534f;
@@ -640,7 +640,7 @@ nav {
 .time7{
    border-right: 4px solid #e751f4;
 }
-.title{
+.title {
   align-items: center;
   font-size: 1.3rem;
   font-weight: 500;
@@ -655,8 +655,6 @@ nav {
 .author__name {
   text-decoration: none;
   color: gray;
-<<<<<<< HEAD
-<<<<<<< HEAD
 }
 /*  ========================================
    Task
@@ -667,29 +665,62 @@ nav {
   box-sizing: border-box;
   width: 500px;
 }
-.task-head {
-  display: grid;
-  grid-template-columns:300px 200px;
+.task {
+  background-color: white;
+  width: 38vw;
+  padding: 2rem;
+
 }
 .task_heading{
- /* margin-top: 10px;*/
   margin-left: 20px;
-  padding-top: 20px;
+  padding: 15px 0;
+  justify-content: space-between;
+  display: flex;
+  box-sizing: border-box;
+}
+.task_items {
+  display: grid;
+  grid-template-columns:60px 350px;
+  grid-gap: 15px 10px;
+  padding: 30px 20px;
+  color: #575962;
 }
 .recent_heading_tools ul li{
   list-style-type: none;
   display: inline-block;
   margin:0 5px;
-  padding-top: 20px;
- }
+}
  .navigation li a {
   text-decoration: none;
   color:#7069ca;
- }
+}
+.navigation_task a {
+  display:inline-block;
+}
  .container input {
   height:17px;
   width: 17px;
- }
+}
+ .timeA{
+  border-left: 4px solid #36a3f7;
+  padding: 15px 20px;
+  font-size: 20px;
+}
+.time11{
+  border-left: 4px solid #feb93b;
+}
+.time22{
+  border-left: 4px solid #7069ca;
+}
+.time33{
+  border-left: 4px solid #3abfa3;
+}
+.time44{
+  border-left: 4px solid #283d39;
+}
+.time55{
+  border-left: 4px solid #7069ca;
+}
  button {
   background-color:#7069ca;
   border: none;
@@ -698,7 +729,7 @@ nav {
   outline: none;
   padding: 0.6em 1.4em;
   font-size: .85rem;
- }
+}
 .list_items {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -710,8 +741,10 @@ nav {
   color:#40534f;
   padding: 15px 20px;
   font-size: 20px;
-  border-right: 4px solid #36a3f7;
+/*  border-left: 4px solid #36a3f7;*/
+/*  margin-left: 10px;*/
 }
+
 .title{
   align-items: center;
   font-size: 1.3rem;
@@ -726,8 +759,10 @@ nav {
 .author__name {
   text-decoration: none;
   color: gray;
-=======
-=======
+  padding: 0;
+}
+.author__info {
+  padding:6px;
 }
 
 /*==================================
@@ -793,7 +828,5 @@ support ticket
 }
 .green {
   color: #48D1CC;
->>>>>>> f96356d00b0ef2fefb4dfb02963ad0536990a505
   padding: 0;
->>>>>>> 2627f68f6cf3d6479c7099ac57c4a163762a1c3f
 }
